<resources>
    <string name="app_name">ApiTesting</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="portfolio">Portfolio</string>
    <string name="balance">Balance</string>
    <string name="favorites">Favorites</string>
    <string name="add_stocks_to_you_favorites">Add stocks to you favorites</string>
    <string name="trending_stocks">Trending Stocks</string>
    <string name="follow">Follow</string>
    <string name="statistics_overview">Statistics Overview</string>
    <string name="searchHint">Search...</string>
    <string name="trade">Trade</string>
    <string name="at">at</string>
    <string name="tab_item_1">Statistics</string>
    <string name="tab_item_2">Description</string>
    <string name="tab_item_3">Transactions</string>
    <string name="empty_input">Field cannot be empty</string>
    <string name="less_than_one">Min to sell is 1</string>
    <string name="no_shares_to_sell">No shares to sell</string>
    <string name="max_to_sell">Max to sell is %1$s</string>
    <string name="amount_between">Amount must be between 1 and 10000</string>
    <string name="valid_number">Enter a valid number</string>
</resources>