<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/portfolio_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_blue"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/home_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="24sp"
            android:textColor="@color/gray"
            android:fontFamily="@font/ubuntu_regular"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/profile_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_person_outline_24"
            android:background="@drawable/round_shape"
            android:backgroundTint="@color/gray"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/home_tv"/>

        <TextView
            android:id="@+id/portfolio_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/balance"
            android:textColor="@color/dark_gray"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_tv" />

        <TextView
            android:id="@+id/total_balance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$0.0"
            android:textColor="@color/gray"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/portfolio_tv"
            app:layout_constraintTop_toBottomOf="@id/portfolio_tv" />

        <TextView
            android:id="@+id/details_portfolio_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:visibility="gone"
            android:text="Details"
            android:textColor="@color/purple_200"
            android:paddingEnd="10dp"
            android:drawableEnd="@drawable/arrow_layer_list"
            android:drawableTint="@color/purple_200"
            app:layout_constraintTop_toTopOf="@id/portfolio_tv"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/portfolio_change_balance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:text="+$0.0 / 0.0%"
            android:textSize="20sp"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/total_balance_tv"
            app:layout_constraintBottom_toBottomOf="@id/total_balance_tv"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/favorites_wrap_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="220dp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="10dp"
        android:background="@color/dark_blue"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/portfolio_wrap">

        <TextView
            android:id="@+id/favorites_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="20sp"
            android:text="@string/favorites"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            tools:listitem="@layout/favorites_stock_item"
            app:layout_constraintTop_toBottomOf="@id/favorites_tv"/>

        <TextView
            android:id="@+id/add_stocks_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/add_stocks_to_you_favorites"
            android:textColor="@color/dark_gray"
            android:textSize="18sp"
            android:visibility="invisible"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_stocks_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_round_add_24"
            style="?attr/materialButtonOutlinedStyle"
            android:visibility="invisible"
            app:strokeColor="@color/dark_gray"
            app:iconTint="@color/gray"
            app:iconPadding="0dp"
            app:iconSize="35dp"
            app:iconGravity="textStart"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/add_stocks_tv"
            app:layout_constraintStart_toStartOf="@id/add_stocks_tv"
            app:layout_constraintEnd_toEndOf="@id/add_stocks_tv"/>

        <include layout="@layout/favorites_shimmer_layout"
            android:id="@+id/favorites_shimmer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/favorites_tv"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/trending_wrap_cl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/dark_blue"
        android:layout_marginTop="10dp"
        android:paddingTop="15dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@id/favorites_wrap_cl"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/trending_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/trending_stocks"
            android:textSize="20sp"
            android:textColor="@color/gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_trending"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trending_tv" />

        <include
            android:id="@+id/trending_shimmer_layout"
            layout="@layout/trending_shimmer_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@id/trending_tv"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


<!--    <com.facebook.shimmer.ShimmerFrameLayout-->
<!--        android:id="@+id/shimmer_layout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="parent">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->

<!--            <include layout="@layout/shimmer_item" />-->

<!--            <include layout="@layout/shimmer_item" />-->

<!--            <include layout="@layout/shimmer_item" />-->

<!--        </LinearLayout>-->
<!--    </com.facebook.shimmer.ShimmerFrameLayout>-->

    <!--    <ProgressBar-->
    <!--        android:id="@+id/progressBar"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:indeterminate="true"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>-->


    <!--    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout-->
    <!--        android:id="@+id/swipe_refresh"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent">-->

    <!--        <androidx.recyclerview.widget.RecyclerView-->
    <!--            android:id="@+id/recycler_view"-->
    <!--            tools:listitem="@layout/stock_item"-->
    <!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"/>-->
    <!--        -->
    <!--    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>